# qgat

./: .gitmodules  Examples.hs  LICENSE  QGAT.hs  QuantumDsl.hs  README.md  Shor.hs  Simon.hs  cabal.project  qgat.cabal  quantum-dsl.cabal
examples/: BernsteinVazirani.hs  DeutschJozsa.hs  Shor.hs  Simon.hs
