cabal-version: 2.2

name: qgat
version: 0.0.0.0

common depends
  build-depends: base, template-haskell, quipper-utils, quipper-language, quipper-libraries, quipper-algorithms
  default-language: Haskell2010
  default-extensions: TemplateHaskell

common example
  import: depends
  build-depends: qgat
  hs-source-dirs: examples

library
  import: depends
  exposed-modules: QGAT

executable BernsteinVazirani
  import: example
  main-is: BernsteinVazirani.hs

executable DeutschJozsa
  import: example
  main-is: DeutschJozsa.hs

executable Shor
  import: example
  main-is: Shor.hs

executable Simon
  import: example
  main-is: Simon.hs
